Fixed formatting errors in jquery.Jcrop.js.

--- a/ui/imageSelectTool/demo/src/main/webapp/index.xhtml
+++ b/ui/imageSelectTool/demo/src/main/webapp/index.xhtml
@@ -94,7 +94,7 @@
     </script>
     <h:form>
         <imageSelectTool:imageSelectTool id="selector"
-                                         for="image"
+                                         target="image"
                                          widgetVar="selector"
                                          value="#{cropper.selection}"
                                          aspectRatio="#{cropper.aspectRatio}"
