--- a/ui/syntaxhighlighter/demo/src/main/webapp/menu.xhtml
+++ b/ui/syntaxhighlighter/demo/src/main/webapp/menu.xhtml
@@ -25,5 +25,6 @@
               xmlns:h="http://java.sun.com/jsf/html">
     <h:panelGrid colsumns="3">
         <h:outputLink value="#{facesContext.externalContext.requestContextPath}/sample_1.jsf">Example 1</h:outputLink>
+        <h:outputLink value="#{facesContext.externalContext.requestContextPath}/sample_2.jsf">Example 2</h:outputLink>
     </h:panelGrid>
 </ui:component>
