RFSBOX-80 Flat mode for colorPicker Rename flatmode attribute to popup

--- a/colorpicker/demo/src/main/webapp/sample_1.xhtml
+++ b/colorpicker/demo/src/main/webapp/sample_1.xhtml
@@ -50,7 +50,7 @@
                                      onshow="#{rich:component('cp1')}.hide()">
                 <a4j:ajax render="out"/>
             </colorpicker:colorPicker>
-            <colorpicker:colorPicker id="cp3" flatmode="true" value="#{colorpickerBean.stringColor}">
+            <colorpicker:colorPicker id="cp3" popup="false" value="#{colorpickerBean.stringColor}">
                 <a4j:ajax render="out"/>
             </colorpicker:colorPicker>
         </rich:collapsiblePanel>
