RF-12563: remove necessity for suffix attribute - added automatic detection of inputs within component DOM tree

--- a/watermark/demo/src/main/webapp/index.xhtml
+++ b/watermark/demo/src/main/webapp/index.xhtml
@@ -15,8 +15,10 @@
     <rich:messages ajaxRendered="true"/>
 
     <h:form>
+        <!-- 
         <a4j:poll ajaxSingle="true" interval="5000"/>
         <a4j:queue requestDelay="400" ignoreDupResponses="true"/>
+         -->
 
         <h:outputLabel value="Watermark text" for="text"/>
         <h:inputTextarea id="text" value="#{watermarkBean.text}" required="true">
@@ -29,15 +31,14 @@
         </h:inputText>
 
         <rich:calendar id="calendar" value="#{watermarkBean.date}" enableManualInput="true" ajaxSingle="true"/>
-        <watermark:watermark value="#{watermarkBean.text}" for="calendar" suffix="InputDate"/>
+        <watermark:watermark value="#{watermarkBean.text}" for="calendar" />
 
         <!--<rich:comboBox>-->
-        <!--<watermark:watermark value="#{watermarkBean.text}" suffix="comboboxField"/>-->
+        <!--<watermark:watermark value="#{watermarkBean.text}"/>-->
         <!--</rich:comboBox>-->
 
         <input id="htmlInput" type="text"/>
         <watermark:watermark value="#{watermarkBean.textObject}" for="htmlInput" converter="#{watermarkBean.converter}"/>
-
 
         <h:inputTextarea id="textarea" value="#{watermarkBean.watermarkedInput}" rows="10" cols="40">
             <watermark:watermark value="#{watermarkBean.text}"/>
